--- a/templates/offers_buy.html
+++ b/templates/offers_buy.html
@@ -12,21 +12,39 @@
                     <div class="d-grid gap-2">
                         <a href="{% url 'offer_create_url' %}" class="btn btn-outline-dark">Создать предложение</a>
                     </div>
-                    {% if offers %}
-                    {% for offer in offers %}
+                    {% if offers_buy %}
+                    {% for offer in offers_buy %}
                         <div class="card mt-3">
                             <div class="card-body">
                                 <div class="d-grid gap-2">
                                     <ul class="list-unstyled">
-                                        <li class="list-group-item"><h5><a class="text-decoration-none" href="{% url 'offer_url' offer.id %}">{{ offer.title }}</a></h5></li>
-                                        <li class="list-group-item text-muted">Категория: {{ offer.category.name }}</li>
+                                        <li class="list-group-item"><h5><a class="text-decoration-none" href="{% url 'offer_url' offer.sale.id %}">{{ offer.sale.title }}</a></h5></li>
+                                        <li class="list-group-item text-muted">Покупатель: {{ offer.buyer.first_name }} {{ offer.buyer.last_name }}</li>
                                         <li class="list-group-item">Количество: {{ offer.amount }}</li>
                                         <li class="list-group-item">Стоимость: {{ offer.price }} тенге</li>
                                         <li class="list-group-item">Дата публикации: {{ offer.datetime }}</li>
                                     </ul>
-                                    <a href="{% url 'offers_buy_url' offer.id %}" class="btn btn-outline-dark">
-                                        Предложения на покупку <span class="badge bg-secondary">{{ offer.count }}</span>
-                                    </a>
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <form method="POST" action="{% url 'offers_accept_url' %}">
+                                                {% csrf_token %}
+                                                <input type="hidden" value="{{ offer.id }}" name="offer_buy_id">
+                                                <input type="hidden" value="{{ offer.sale.id }}" name="offer_sale_id">
+                                                <input type="submit" class="btn btn-outline-dark w-100" value="Принять">
+                                            </form>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <form method="POST" action="{% url 'offers_decline_url' %}">
+                                                {% csrf_token %}
+                                                <input type="hidden" value="{{ offer.id }}" name="offer_buy_id">
+                                                <input type="hidden" value="{{ offer.sale.id }}" name="offer_sale_id">
+                                                <input type="submit" class="btn btn-outline-dark w-100" value="Отклонить">
+                                            </form>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <a class="btn btn-outline-dark w-100" href="{% url 'cabinet_url' %}">Закрыть</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -37,7 +55,7 @@
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img src="{{ user.avatar.url }}" class="card-img-top" alt="Avatar">
+                <img src="{{ user.avatar.url }}" class="card-img-top rounded-circle" alt="Avatar">
                 <div class="card-body">
                     <h4 class="card-title">{{ user.first_name }} {{ user.last_name }}</h4>
                     <p class="card-text">Электронная почта: {{ user.email }}</p>
