--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
             color: #434043;
             font-size: 16px;
             text-transform: uppercase;
+        }
     </style>
 </head>
 <body>
@@ -36,13 +37,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home_url' %}"><h4>Главная</h4></a>
+                        <a class="nav-link" href="{% url 'home_url' %}">Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cabinet_url' %}"><h4>Кабинет</h4></a>
+                        <a class="nav-link" href="{% url 'cabinet_url' %}">Кабинет</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'offers_url' %}"><h4>Предложения</h4></a>
+                        <a class="nav-link" href="{% url 'offers_url' %}">Предложения</a>
                     </li>
                 </ul>
             </div>
@@ -50,19 +51,19 @@
                 {% if user.is_authenticated %}
                 <ul class ="navbar-nav">
                     <li class="nav-item my-auto">
-                        <a class="nav-link " href="{% url 'cabinet_url' %}"><h5><i class="bi bi-person-circle"></i> {{ user.first_name }} {{ user.last_name }}</h5></a>
+                        <a class="nav-link " href="{% url 'cabinet_url' %}"><i class="bi bi-person-circle"></i> {{ user.first_name }} {{ user.last_name }}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout_url' %}"><h4>Выход</h4></a>
+                        <a class="nav-link" href="{% url 'logout_url' %}">Выход</a>
                     </li>
                 </ul>
                 {% else %}
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login_url' %}"><h4>Авторизация</h4></a>
+                        <a class="nav-link" href="{% url 'login_url' %}">Авторизация</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'signup_url' %}"><h4>Регистрация</h4></a>
+                        <a class="nav-link" href="{% url 'signup_url' %}">Регистрация</a>
                     </li>
                 </ul>
                 {% endif %}
