--- a/templates/offer_buy_create.html
+++ b/templates/offer_buy_create.html
@@ -57,7 +57,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <label for="amount" class="form-label">Количество</label>
-                        <input type="text" class="form-control" id="amount" name="amount" maxlength="64" value="{{ offer.amount }}">
+                        <input type="text" onchange="checkamount()" class="form-control" id="amount" name="amount" maxlength="64" value="{{ offer.amount }}">
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="price" class="form-label">Стоимость</label>
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="d-grid gap-2 mt-3">
-                <button type="submit" class="btn btn-outline-dark me-2">Создать предложение</button>
+                <button type="submit" id="create" class="btn btn-outline-dark me-2">Создать предложение</button>
                 <button type="reset" class="btn btn-outline-dark me-2">Сбросить</button>
                 <a href="{% url 'cabinet_url'%}" class="btn btn-outline-dark me-2">Закрыть</a>      
             </div>
@@ -81,5 +81,22 @@
     {% endfor %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    function checkamount(){
+        var amount=document.getElementById('amount');
+        var button=document.getElementById('create');
+        if(!isNaN(amount.value)){
+            if(amount.value > {{ offer.amount }}){
+                button.disabled=true; 
+            }
+            else{
+                button.disabled=false;
+            }
+        }
+        else{
+            button.disabled=true;
+        }
+    }
+</script>
 </body>
 </html>
