--- a/templates/base.html
+++ b/templates/base.html
@@ -9,13 +9,13 @@
     <link rel="icon" href="{% static 'img/favicon.png' %}" sizes="16x16 32x32" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="{% static 'doc/lottie.min.js' %}"></script>
     <style>
         body {
             background-color: #f8f9fa;
-            font-family: 'Raleway', sans-serif;
+            font-family: 'Manrope', sans-serif;
             margin-bottom: 70px;
         }
         .nav-link {
