--- a/templates/cabinet.html
+++ b/templates/cabinet.html
@@ -3,14 +3,13 @@
 {% block title %}Cabinet{% endblock title %}
 
 {% block content %}
-{% comment %} {% if user.is_authenticated %} {% endcomment %}
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-8">
             <div class="card">
                 <div class="card-body">
                     <div class="d-grid gap-2">
-                        <a href="{% url 'offer_create_url' %}" class="btn btn-outline-dark">Создать предложение</a>
+                        <a href="{% url 'offer_create_url' %}" class="btn btn-outline-dark">Создать предложение на продажу</a>
                     </div>
                     {% if offers %}
                     {% for offer in offers %}
@@ -18,10 +17,17 @@
                             <div class="card-body">
                                 <div class="d-grid gap-2">
                                     <ul class="list-unstyled">
-                                        <li class="list-group-item"><h5><a class="text-decoration-none" href="{% url 'offer_url' offer.id %}">{{ offer.title }}</a></h5></li>
+                                        <li class="list-group-item"><h5><a class="text-decoration-none" href="{% url 'offer_url' offer.id %}">{{ offer.title }} {{ offer.manufacturer }} {{ offer.offer_model }}</a></h5></li>
                                         <li class="list-group-item text-muted">Категория: {{ offer.category.name }}</li>
                                         <li class="list-group-item">Количество: {{ offer.amount }}</li>
-                                        <li class="list-group-item">Стоимость: {{ offer.price }} тенге</li>
+                                        <li class="list-group-item">Стоимость за {{ offer.unit }}: {{ offer.price }} KZT</li>
+                                        <li class="list-group-item">Состояние: 
+                                            {% if offer.condition_new %}
+                                                <span>Новое</span>
+                                            {% else %}
+                                                <span>Бывшее в употреблении</span>
+                                            {% endif %}
+                                        </li>
                                         <li class="list-group-item">Дата публикации: {{ offer.datetime }}</li>
                                     </ul>
                                     <a href="{% url 'offers_buy_url' offer.id %}" class="btn btn-outline-dark">
@@ -37,14 +43,31 @@
         </div>
         <div class="col-md-4">
             <div class="card">
+
                 <img src="{{ user.avatar.url }}" class="card-img-top" alt="Avatar">
                 <div class="card-body">
-                    <h4 class="card-title">{{ user.first_name }} {{ user.last_name }}</h4>
-                    <p class="card-text">Электронная почта: {{ user.email }}</p>
-                    <p class="card-text">Страна: {{ user.country }}</p>
-                    <p class="card-text">Город: {{ user.city }}</p>
-                    <p class="card-text">Номер телефона: {{ user.phone }}</p>
-                        <div class="d-grid gap-2">
+                    <table class="table-borderless">
+                        <h4 class="card-title">{{ user.first_name }} {{ user.last_name }}</h4>
+                        <tbody>
+                            <tr>
+                                <td class="card-text"><i class="bi bi-envelope-at-fill"></i></td>
+                                <td class="card-text">{{ user.email }}</td>
+                            </tr>
+                            <tr>
+                                <td class="card-text"><i class="bi bi-telephone-fill"></i></td>
+                                <td class="card-text">{{ user.phone }}</td>
+                            </tr>
+                            <tr>
+                                <td class="card-text"><i class="bi bi-house-door-fill"></i></td>
+                                <td class="card-text">{{ user.country }}, {{ user.city }}, {{ user.street }}, {{ user.home_number }}</td>
+                            </tr>
+                            <tr>
+                                <td class="card-text"><i class="bi bi-calendar-check-fill"></i></td>
+                                <td class="card-text">{{ user.date_joined|date:"d.m.Y" }} г.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                        <div class="d-grid gap-2 mt-3">
                             <a href="{% url 'edit_profile_url' %}" class="btn btn-outline-dark">Редактировать профиль</a>
                             {% if user.is_superuser %}
                             <a href="{% url 'admin:index' %}" class="btn btn-outline-dark">Панель администратора</a>
@@ -55,16 +78,4 @@
         </div>
     </div>
 </div>
-{% comment %} {% else %}
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-12">
-            <h5>У вас нет доступа к кабинету, пожалуйста 
-                <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0" href="{% url 'signup_url' %}">зарегестрируйтесь</a> или 
-                <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0" href="{% url 'login_url' %}">авторизируйтесь!</a>
-            </h5>
-        </div>
-    </div>
-</div>
-{% endif %} {% endcomment %}
 {% endblock %}
